[package]
name = "rmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rmd"
path = "src/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
easy_reader = "0.5.2"
regex = "1.5.4"

[dev-dependencies]
assert_fs = "1.0.7"
